# nornir-salt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  QueueRunner.py  README.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements-prodmax.txt  requirements-prodmin.txt  requirements.txt  setup.py
.github/workflows/: main.yml
docs/source/: Connection Plugins.rst  Functions.rst  Getting started.rst  Installation.rst  Inventory Plugins.rst  Overview.rst  Processors Plugins.rst  Runner Plugins.rst  Task Plugins.rst  conf.py  index.rst  release notes.txt  spelling_wordlist.txt
docs/source/Functions/: DumpResults.rst  FFun.rst  HostsKeepalive.rst  InventoryFun.rst  ResultSerializer.rst  TabulateFormatter.rst  index.rst
docs/source/Processors/: DataProcessor.rst  DiffProcessor.rst  Processors Plugins.rst  SaltEventProcessor.rst  TestsProcessor.rst  ToFileProcessor.rst  index.rst
docs/source/Runners/: QueueRunner.rst  RetryRunner.rst  index.rst
docs/source/Tasks/: connections.rst  files.rst  http_call.rst  index.rst  napalm_configure.rst  napalm_send_commands.rst  ncclient_call.rst  netbox_tasks.rst  netmiko_send_command_ps.rst  netmiko_send_commands.rst  netmiko_send_config.rst  network.rst  nr_test.rst  puresnmp_call.rst  pyats_genie_api.rst  pyats_send_commands.rst  pyats_send_config.rst  pyatsunicon_send_commands.rst  pyatsunicon_send_config.rst  pygnmi_call.rst  salt_cfg_gen.rst  salt_clear_hcache.rst  scrapli_netconf_call.rst  scrapli_send_commands.rst  scrapli_send_config.rst  sleep.rst  tcp_ping.rst
docs/source/_images/: QueueRunner_v0.graphml  RetryRunner_v0.graphml
examples/: test_nornir_queue_runner.py  test_nornir_retry_runner.py
nornir_salt/: __init__.py
nornir_salt/plugins/connections/: ConnectionsPool.py  HTTPPlugin.py  NcclientPlugin.py  NetboxConnectionPlugin.py  PureSNMPPlugin.py  PyATSUnicon.py  PyGNMIPlugin.py  __init__.py
nornir_salt/plugins/functions/: DumpResults.py  FFun.py  FiltersFun.py  FindString.py  HostsKeepalive.py  InventoryFun.py  ParseTTP.py  ResultSerializer.py  TabulateFormatter.py  TestFuncs.py  ToFile.py  __init__.py
nornir_salt/plugins/inventory/: DictInventory.py  __init__.py
nornir_salt/plugins/processors/: DataProcessor.py  DiffProcessor.py  N2GProcessor.py  NorFabEventProcessor.py  SaltEventProcessor.py  TestsProcessor.py  ToFileProcessor.py  __init__.py
nornir_salt/plugins/runners/: QueueRunner.py  RetryRunner.py  __init__.py
nornir_salt/plugins/tasks/: __init__.py  connections.py  file_read.py  files.py  http_call.py  napalm_configure.py  napalm_send_commands.py  ncclient_call.py  netbox_tasks.py  netmiko_send_command_ps.py  netmiko_send_commands.py  netmiko_send_config.py  network.py  nr_test.py  puresnmp_call.py  pyats_genie_api.py  pyats_send_commands.py  pyats_send_config.py  pyatsunicon_send_commands.py  pyatsunicon_send_config.py  pygnmi_call.py  salt_cfg_gen.py  salt_clear_hcache.py  scrapli_netconf_call.py  scrapli_send_commands.py  scrapli_send_config.py  sleep.py  tcp_ping.py
nornir_salt/utils/: MakePlugin.py  __init__.py  cfg_form_commands.py  cli_form_commands.py  cli_send_commands.py  pydantic_models.py  yangdantic.py
tests/: custom_functions_tests.py  test_DataProcessor.py  test_DictInventory.py  test_DiffProcessor_plugin.py  test_InventoryFun.py  test_TabulateFormatter.py  test_TestsProcessor_comprehensive.py  test_TestsProcessor_plugin.py  test_ToFileProcessor_plugin.py  test_docs.py  test_file_read_task_plugin.py  test_files_task_diff.py  test_files_task_plugins.py  test_gnmi.py  test_http_plugins.py  test_nornir_filters.py  test_nornir_functions.py  test_pydantic_models.py  test_runner_plugins.py  test_task_connections.py  test_task_plugins.py
tests/LAB configurations/: IOL1.txt  IOL2.txt
tests/assets/: custom_check_function_fun_1.txt
