[tool.poetry]
name = "nornir_salt"
version = "0.22.5"
description = "Nornir plugins used with SaltStack Salt-Nornir Proxy Minion"
authors = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
maintainers = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dmulyalin/nornir-salt"
repository = "https://github.com/dmulyalin/nornir-salt"
documentation = "https://nornir-salt.readthedocs.io/"
keywords = ["Nornir", "SaltStack"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
# mandatory dependencies
python = ">=3.9,<4.0"
nornir = ">=3.3.0,<=4.0.0"
pydantic = ">=2.0.0,<3.0.0"

# optional dependencies for extras definition
cerberus = { version = "1.3.5", optional = true }
genie = { version = "23.11", markers = "sys_platform != 'win32'", optional = true, extras = ['full'] }
jmespath = { version = "1.0.1", optional = true }
napalm = { version = "4.1.0", optional = true }
ncclient = { version = "0.6.15", optional = true }
netmiko = { version = ">=4.0.0,<5.0.0", optional = true }
nornir-napalm = { version = "0.4.0", optional = true }
nornir-netmiko = { version = "1.0.1", optional = true }
nornir-scrapli = { version = "2023.7.30", optional = true }
ntc-templates = { version = "4.1.0", optional = true }
paramiko = { version = "3.4.0", optional = true }
pyats = { version = "23.11", markers = "sys_platform != 'win32'", optional = true, extras = ['full'] }
pygnmi = { version = "0.8.13", optional = true }
pynetbox = { version = "7.3.3", optional = true }
pyyaml = { version = "6.0.1", optional = true }
puresnmp = { version = "2.0.0", optional = true, extras = ['crypto'] }
requests = { version = "2.31.0", optional = true }
scrapli = { version = "2023.7.30", optional = true }
scrapli-community = { version = "2023.7.30", optional = true }
scrapli-netconf = { version = "2023.7.30", optional = true }
tabulate = { version = "0.9.0", optional = true }
ttp = { version = "0.9.*", optional = true }
ttp-templates = { version = "0.3.*", optional = true }
xmltodict = { version = "0.13.0", optional = true }
lxml = { version = ">=4.9.3,<5.1.0", optional = true }
textfsm = { version = "1.1.3", optional = true }
jinja2 = { version = "3.1.3", optional = true }
rich = { version = "13.7.0", optional = true }
N2G = { version = "0.3.*", optional = true }
robotframework = { version = "7.0", optional = true }
dnspython = { version = "2.4.2", optional = true, python = ">=3.8,<4.0"}
diskcache = { version = "5.6.3", optional = true }
pythonping = { version = "1.1.4", optional = true }
picle = { version = ">=0.1.0,<1.0.0", optional = true }

# docs dependencies for extras definition
readthedocs-sphinx-search = { version = "0.3.2", optional = true }
Sphinx = { version = "4.3.0", optional = true }
sphinx_rtd_theme = { version = "1.0.0", optional = true }
sphinxcontrib-applehelp = { version = "1.0.1", optional = true }
sphinxcontrib-devhelp = { version = "1.0.1", optional = true }
sphinxcontrib-htmlhelp = { version = "2.0.0", optional = true }
sphinxcontrib-jsmath = { version = "1.0.1", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
sphinxcontrib-qthelp = { version = "1.0.2", optional = true }
sphinxcontrib-serializinghtml = { version = "1.1.5", optional = true }
sphinxcontrib-spelling = { version = "7.2.1", optional = true }

[tool.poetry.dev-dependencies]
bandit = "1.7.*"
black = "22.3.*"
flake8 = "4.0.*"
pre-commit = "2.15.*"
pyenchant = "3.2.*"
pylint = "2.12.*"
pytest = { version = ">=7.1", markers = "python_version >= '3.7'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
prodminmaster = [
    "rich",
    "tabulate"
]
prodmaxmaster = [
    "pynetbox",
    "rich",
    "tabulate",
    "ttp",
    "ttp-templates",
    "N2G",
	"robotframework"
]
prodminminion = [
    "ncclient",
    "netmiko",
    "nornir-netmiko",
    "paramiko",
    "requests",
    "tabulate",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "jinja2",
    "textfsm"
]
prodmaxminion = [
    "cerberus",
    "genie",
    "jmespath",
    "napalm",
    "ncclient",
    "netmiko",
    "nornir-napalm",
    "nornir-netmiko",
    "nornir-scrapli",
    "ntc-templates",
    "paramiko",
    "pyats",
    "pygnmi",
    "pynetbox",
    "pyyaml",
    "puresnmp",
    "requests",
    "scrapli",
    "scrapli-community",
    "scrapli-netconf",
    "tabulate",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "jinja2",
    "textfsm",
	"dnspython",
    "pythonping"
]
docs = [
    "readthedocs-sphinx-search",
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
    "sphinxcontrib-spelling",
]
netmiko = [
    "netmiko",
    "nornir-netmiko"
]
napalm = [
    "napalm",
    "nornir-napalm"
]
scrapli = [
    "scrapli",
    "scrapli-community",
]
pyats = [
    "genie",
    "pyats"
]
netconf = [
    "ncclient",
    "scrapli-netconf",
]
gnmi = [
    "pygnmi"
]
restconf = [
    "requests"
]
dataprocessor = [
    "cerberus",
    "jmespath",
    "ntc-templates",
    "pyyaml",
    "tabulate",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "lxml"
]

[tool.poetry.plugins."nornir.plugins.inventory"]
"DictInventory" = "nornir_salt.plugins.inventory:DictInventory"

[tool.poetry.plugins."nornir.plugins.runners"]
"QueueRunner" = "nornir_salt.plugins.runners:QueueRunner"
"RetryRunner" = "nornir_salt.plugins.runners:RetryRunner"

[tool.poetry.plugins."nornir.plugins.connections"]
"ncclient" = "nornir_salt.plugins.connections:NcclientPlugin"
"http" = "nornir_salt.plugins.connections:HTTPPlugin"
"pygnmi" = "nornir_salt.plugins.connections:PyGNMIPlugin"
"ConnectionsPool" = "nornir_salt.plugins.connections:ConnectionsPool"
"pyats" = "nornir_salt.plugins.connections:PyATSUnicon"
"puresnmp" = "nornir_salt.plugins.connections:PureSNMPPlugin"
