[tool.poetry]
name = "nornir_salt"
version = "0.23.3"
description = "Nornir plugins used with SaltStack Salt-Nornir Proxy Minion and NorFab"
authors = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
maintainers = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dmulyalin/nornir-salt"
repository = "https://github.com/dmulyalin/nornir-salt"
documentation = "https://nornir-salt.readthedocs.io/"
keywords = ["Nornir", "SaltStack"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
# mandatory dependencies
python = ">=3.10,<4.0"
nornir = ">=3.3.0,<=4.0.0"
pydantic = ">=2.0.0,<3.0.0"

# optional dependencies for extras definition
cerberus = { version = "1.3.8", optional = true }
jmespath = { version = "1.1.0", optional = true }
napalm = { version = "5.1.0", optional = true }
ncclient = { version = "0.7.0", optional = true }
netmiko = { version = "4.6.0", optional = true }
nornir-napalm = { version = "0.5.0", optional = true }
nornir-netmiko = { version = "1.0.1", optional = true }
nornir-scrapli = { version = "2025.01.30", optional = true }
ntc-templates = { version = "8.1.0", optional = true }
paramiko = { version = "4.0.0", optional = true }
genie = { version = "23.11", markers = "sys_platform != 'win32'", optional = true, extras = ['full'] }
pyats = { version = "23.11", markers = "sys_platform != 'win32'", optional = true, extras = ['full'] }
pygnmi = { version = "0.8.15", optional = true }
pynetbox = { version = "7.6.1", optional = true }
pyyaml = { version = "6.0.3", optional = true }
puresnmp = { version = "2.0.1", optional = true, extras = ['crypto'] }
requests = { version = "2.32.5", optional = true }
scrapli = { version = "2025.01.30", optional = true }
scrapli-community = { version = "2025.01.30", optional = true }
scrapli-netconf = { version = "2026.01.12", optional = true }
tabulate = { version = "0.9.0", optional = true }
ttp = { version = "0.10.0", optional = true }
ttp-templates = { version = "0.3.*", optional = true }
xmltodict = { version = "1.0.3", optional = true }
lxml = { version = "6.0.2", optional = true }
textfsm = { version = "2.1.0", optional = true }
jinja2 = { version = "3.1.6", optional = true }
rich = { version = "14.3.2", optional = true }
N2G = { version = "0.3.*", optional = true }
robotframework = { version = "7.4.1", optional = true }
dnspython = { version = "2.8.0", optional = true, python = ">=3.8,<4.0"}
diskcache = { version = "5.6.3", optional = true }
pythonping = { version = "1.1.4", optional = true }
picle = { version = ">=0.1.0,<1.0.0", optional = true }

# docs dependencies for extras definition
readthedocs-sphinx-search = { version = "*", optional = true }
Sphinx = { version = "*", optional = true }
sphinx_rtd_theme = { version = "*", optional = true }
sphinxcontrib-applehelp = { version = "*", optional = true }
sphinxcontrib-devhelp = { version = "*", optional = true }
sphinxcontrib-htmlhelp = { version = "*", optional = true }
sphinxcontrib-jsmath = { version = "*", optional = true }
sphinxcontrib-napoleon = { version = "*", optional = true }
sphinxcontrib-qthelp = { version = "*", optional = true }
sphinxcontrib-serializinghtml = { version = "*", optional = true }
sphinxcontrib-spelling = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
flake8 = "*"
pre-commit = "*"
pyenchant = "*"
pylint = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
prodminmaster = [
    "rich",
    "tabulate"
]
prodmaxmaster = [
    "pynetbox",
    "rich",
    "tabulate",
    "ttp",
    "ttp-templates",
    "N2G",
	"robotframework"
]
prodminminion = [
    "ncclient",
    "netmiko",
    "nornir-netmiko",
    "paramiko",
    "requests",
    "tabulate",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "jinja2",
    "textfsm"
]
prodmaxminion = [
    "cerberus",
    "genie",
    "jmespath",
    "napalm",
    "ncclient",
    "netmiko",
    "nornir-napalm",
    "nornir-netmiko",
    "nornir-scrapli",
    "ntc-templates",
    "paramiko",
    "pyats",
    "pygnmi",
    "pynetbox",
    "pyyaml",
    "puresnmp",
    "requests",
    "scrapli",
    "scrapli-community",
    "scrapli-netconf",
    "tabulate",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "jinja2",
    "textfsm",
	"dnspython",
    "pythonping"
]
docs = [
    "readthedocs-sphinx-search",
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
    "sphinxcontrib-spelling",
]
netmiko = [
    "netmiko",
    "nornir-netmiko"
]
napalm = [
    "napalm",
    "nornir-napalm"
]
scrapli = [
    "scrapli",
    "scrapli-community",
]
pyats = [
    "genie",
    "pyats"
]
netconf = [
    "ncclient",
    "scrapli-netconf",
]
gnmi = [
    "pygnmi"
]
restconf = [
    "requests"
]
dataprocessor = [
    "cerberus",
    "jmespath",
    "ntc-templates",
    "pyyaml",
    "tabulate",
    "ttp",
    "ttp-templates",
    "xmltodict",
    "lxml"
]

[tool.poetry.plugins."nornir.plugins.inventory"]
"DictInventory" = "nornir_salt.plugins.inventory:DictInventory"

[tool.poetry.plugins."nornir.plugins.runners"]
"QueueRunner" = "nornir_salt.plugins.runners:QueueRunner"
"RetryRunner" = "nornir_salt.plugins.runners:RetryRunner"

[tool.poetry.plugins."nornir.plugins.connections"]
"ncclient" = "nornir_salt.plugins.connections:NcclientPlugin"
"http" = "nornir_salt.plugins.connections:HTTPPlugin"
"pygnmi" = "nornir_salt.plugins.connections:PyGNMIPlugin"
"ConnectionsPool" = "nornir_salt.plugins.connections:ConnectionsPool"
"pyats" = "nornir_salt.plugins.connections:PyATSUnicon"
"puresnmp" = "nornir_salt.plugins.connections:PureSNMPPlugin"

[tool.ruff.lint]
ignore = [
    "E712", # true-false-comparison
]

select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff]
line-length = 320
